# dbms

./: README.md  eslint.config.mjs  package-lock.json  package.json
.github/workflows/: build.yml  ci.yml  release.yml
app/: constants.ts  globals.css  page.tsx  types.ts
app/components/: ActivityBar.tsx  ConfirmDialog.tsx  ConnectionModal.tsx  DebugTerminal.tsx  QueryEditor.tsx  SettingsView.tsx  Sidebar.tsx  StatusBar.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: db.rs  lib.rs  settings.rs
