[package]
name = "dbms"
version = "0.1.0"
description = "A Tauri App"
authors = ["Armzi"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib", "staticlib"]
name = "app_lib"

[dependencies]
futures = "0.3.31"
log = "0.4"
mongodb = "3.2.5"
redis = { version = "0.32.2", features = ["tokio-comp"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.8.6", features = [
  "mysql",
  "postgres",
  "runtime-tokio",
  "tls-native-tls"
] }
tauri = { version = "2.9.5", features = [] }
tauri-plugin-log = "2"
tiberius = "0.12.3"
tokio = { version = "1.49.0", features = ["full"] }
tokio-util = { version = "0.7.18", features = ["compat"] }
url = "2.5.8"
uuid = "1.19.0"

[build-dependencies]
tauri-build = { version = "2.5.3", features = [] }
