[package]
name = "dbms"
version = "0.1.1"
description = "Database Management Tools"
authors = ["Armzi"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib", "staticlib"]
name = "app_lib"

[dependencies]
bigdecimal = "0.4"
chrono = { version = "0.4", features = ["serde"] }
csv = "1.3"
futures = "0.3.31"
log = "0.4"
mongodb = "3.2.5"
quick-xml = { version = "0.36", features = ["serialize"] }
redis = { version = "0.32.2", features = ["tokio-comp"] }
rust_xlsxwriter = "0.77"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.8.6", features = [
  "bigdecimal",
  "chrono",
  "json",
  "mysql",
  "postgres",
  "runtime-tokio",
  "tls-native-tls",
  "uuid"
] }
tauri = { version = "2.9.5", features = [] }
tauri-plugin-dialog = "2.6.0"
tauri-plugin-log = "2"
tiberius = { version = "0.12.3", features = ["chrono"] }
tokio = { version = "1.49.0", features = ["full"] }
tokio-util = { version = "0.7.18", features = ["compat"] }
url = "2.5.8"
uuid = "1.19.0"

[build-dependencies]
tauri-build = { version = "2.5.3", features = [] }
